--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Internacionalization</string>
+    <string name="login">Login</string>
+    <string name="subtitle">Please provide your information</string>
+    <string name="email">Enter your email</string>
+    <string name="password">Enter your password</string>
+    <string name="enter">ENTER</string>
 </resources>
